MSF super block load and signature check complete.

--- a/PdbDumper.csproj
+++ b/PdbDumper.csproj
@@ -10,7 +10,9 @@
 
   <ItemGroup>
     <Compile Remove="BugException.cs" />
+    <Compile Remove="MSFSuperBlock.cs" />
     <Compile Remove="Pdb.cs" />
+    <Compile Remove="PDBFormatException.cs" />
   </ItemGroup>
 
   <ItemGroup>
