--- a/PdbDumper.csproj
+++ b/PdbDumper.csproj
@@ -11,9 +11,15 @@
   <ItemGroup>
     <Compile Remove="BlockMapReader.cs" />
     <Compile Remove="BugException.cs" />
+    <Compile Remove="DebugInformationStream.cs" />
+    <Compile Remove="HashTableReader.cs" />
+    <Compile Remove="ModuleInfoRecord.cs" />
     <Compile Remove="MSFSuperBlock.cs" />
     <Compile Remove="Pdb.cs" />
     <Compile Remove="PDBFormatException.cs" />
+    <Compile Remove="PdbStreamHeader.cs" />
+    <Compile Remove="PdbStreamReader.cs" />
+    <Compile Remove="PdbStreamVersion.cs" />
   </ItemGroup>
 
   <ItemGroup>
