--- a/PdbDumper.csproj
+++ b/PdbDumper.csproj
@@ -9,10 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Microsoft\**" />
+    <EmbeddedResource Remove="Microsoft\**" />
+    <None Remove="Microsoft\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="BlockMapReader.cs" />
     <Compile Remove="BugException.cs" />
     <Compile Remove="DebugInformationStream.cs" />
     <Compile Remove="HashTableReader.cs" />
+    <Compile Remove="IdIndexedStream.cs" />
+    <Compile Remove="IndexedStream.cs" />
     <Compile Remove="ModuleInfoRecord.cs" />
     <Compile Remove="MSFSuperBlock.cs" />
     <Compile Remove="Pdb.cs" />
@@ -20,6 +28,7 @@
     <Compile Remove="PdbStreamHeader.cs" />
     <Compile Remove="PdbStreamReader.cs" />
     <Compile Remove="PdbStreamVersion.cs" />
+    <Compile Remove="TypeIndexedStream.cs" />
   </ItemGroup>
 
   <ItemGroup>
