FIX : Incorrect SectionMapEntry layout in DebugInformationStream

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "PdbReader Debug|X64": {
       "commandName": "Executable",
       "executablePath": "C:\\Users\\jp.forestier\\source\\repos\\PERSO\\PDB\\PdbReader\\bin\\x64\\Debug\\net6.0\\PdbDumper.exe",
-      "commandLineArgs": "%USERPROFILE%\\AppData\\Local\\Temp\\SymbolCache\\ntdll.pdb\\FEA202D5473341CB4B29F58357A35D63\\ntdll.pdb"
+      "commandLineArgs": "%USERPROFILE%\\AppData\\Local\\Temp\\SymbolCache\\vcruntime140d.i386.pdb\\09A50E98E3044DD7B1952A885E6A73E91\\vcruntime140d.i386.pdb"
     },
     "PdbDumper Debug|X64": {
       "commandName": "Project",
